Get gocryptfs password from environment; fusermount fixes